[package]
name = "txtfmt"
version = "0.1.0"
authors = ["Henri Sivonen <hsivonen@hsivonen.fi>", "Starz0r <starz0r@starz0r.com>"]

[features]
simd-accel = ["encoding_rs/simd-accel"]

[dependencies]
getopts = "0.2.14"

[dependencies.encoding_rs]
version = "0.8.11"
features = ["fast-legacy-encode"]

[profile.release]
lto = true
